 - Fixed tabs loosing red/blue color when being renamed.
 - Fixed initial query tabs not being truncated.
 - Make tabs red on channel actions too.
 - Configure script python detection fixes (Johan Dahlin).
 - Added /charset command.
 - Don't auto remove stalled DCCs unless dcc_remove setting is on.
 - Avoid recursive UserCommand buffer overflow.
 - Added xchat_emit_print() to plugin interface.
 - 
 - 


----------------------------------------------------------------------
 2.0.0pre1
----------------------------------------------------------------------

 - Updated translations (sv, es, am, el, lv, no).
 - Fixed possible blank userlist after another tab was detached.
 - Changed default keybinding for next/prev-tab to ctrl-pageup/down,
   as per standard.
 - Added IPAddress field to "DCC SEND Offer" text event.
 - Fixed perl IRC::print_with_channel 1.8.x incompatibility.
 - xtext: Fixed bugs in new scrolling code.
 - Use filesystem encoding for log filenames.
 - Focus the inputbox when left-clicking in xtext.
 - Focus the inputbox when typing while the userlist is in focus.
 - Fixed bug where text typed could be sent to the wrong window after
   a detach.
 - New default icon again, this one scales better (Dagmar d'Surreal).
 - Send /LIST args on galaxynet.
 - Added settings to change inputbox and userlist styles to the same
   as the main text area.
 - Don't allow the Perl plugin to be loaded twice (Ian Kumlien).
 - Fixed servlist crash on 'use global' off and empty nick field.
 - Added missing address field to Perl's IRC::dcc_list.
 - Added irc_conf_mode setting (via /set only).
 - Save xchat.conf safely (Michael Witrant).
 - Added support for numeric 005 token NAMESX.
 - Added TCL Plugin (Daniel P. Stasinski).
 - Added 'Add' button to serverlist, due to popular demand.
 - Update intl/ to 0.11.4.
 - Win32 fixes/makefile for python plugin (James Potts).
 - Win32: fixed clipboard bugs and dcc receive.
 - Plugin iface: Added dcc-list fields "address32" and "port".