@@ -16,6 +16,7 @@
  - Don't auto remove stalled DCCs unless dcc_remove setting is on.
  - Avoid recursive UserCommand buffer overflow.
  - Added xchat_emit_print() to plugin interface.
+ - Left and Right positioned tabs are possible again (Lloyd Williams).
  - 
  - 
 
